--- a/style.css
+++ b/style.css
@@ -64,13 +64,24 @@ nav{
     background-color: #eb3007;
     display: flex;
     border-radius: 100%;
-    margin-right: 5rem;
+    /* margin-right: 5rem; */
 }
 
 .logo i{
     margin: auto;
     font-size: 3rem;
     color: #eee;
+}
+
+.small{
+    color: #eee;
+    font-size: 2.5rem;
+    margin-right: 5rem;
+    transition: color 650ms; 
+}
+
+.small:hover{
+    color: #eb3007;
 }
 
 .nav-list{
@@ -101,16 +112,17 @@ nav{
     color: #eb3007;
 }
 
-nav.onscroll{
+/* .container.onscroll{
     position: fixed;
    color: #191919;
-   background-color: #eee; 
+   background-color: #eee;
+   z-index: 0; 
 }
 
-nav.onscrooll .logo i,
-nav.onscrooll .nav-list a{
+.container.onscrooll nav .logo i,
+.container.onscrooll nav .nav-list li a{
     color: #191919;
-}
+} */
 
 
 .btn{
